tests/TypingSpec/invalid/kinds/arrow-kind-2.algst
forall (a:P). D0_TL -> a
